--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "scripts": {
     "dev": "npm-run-all --parallel dev:**",
     "dev:server": "cross-env NODE_ENV=development webpack --config build/webpack.conf.server.js --watch",
-    "dev:client": "webpack-dev-server --config build/webpack.conf.client.dev.js --watch",
+    "dev:client": "webpack --config build/webpack.conf.client.dev.js --watch",
     "dev:start": "nodemon dist/static/server.js",
     "build": "rimraf dist && npm-run-all --parallel build:**",
     "build:server": "webpack --config build/webpack.conf.server.js",
@@ -11,10 +11,12 @@
   },
   "devDependencies": {
     "@babel/core": "^7.5.4",
+    "@babel/plugin-proposal-class-properties": "^7.5.0",
     "autoprefixer": "^9.6.1",
     "cross-env": "^5.2.0",
     "css-loader": "^3.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "isomorphic-style-loader": "^5.1.0",
     "mini-css-extract-plugin": "^0.7.0",
     "node-sass": "^4.12.0",
     "nodemon": "^1.19.1",
@@ -38,6 +40,7 @@
     "koa": "^2.7.0",
     "koa-static": "^5.0.0",
     "koa-static-cache": "^5.1.2",
+    "npm-run-all": "^4.1.5",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
