--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "vconsole": "^3.3.2"
   }
 }
