--- a/package.json
+++ b/package.json
@@ -38,12 +38,14 @@
     "axios": "^0.19.0",
     "babel-loader": "^8.0.6",
     "koa": "^2.7.0",
+    "koa-compress": "^3.0.0",
     "koa-static": "^5.0.0",
     "koa-static-cache": "^5.1.2",
     "npm-run-all": "^4.1.5",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
+    "react-lazyload": "^2.6.2",
     "react-redux": "^7.1.0",
     "react-router-config": "^5.0.1",
     "react-router-dom": "^5.0.1",
